k8s_v1/stable-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
spec:
  selector:
    app: ${APP_NAME}
    version: ${CURRENT_LABEL_VERSION}
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
